--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Drew's DIY
+subtitle: "Doing stupid stuff for the fun of it."
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about everyday life, from the perspective of an everyday person
@@ -21,6 +22,7 @@ twitter_username: username
 github_username: foxler2010
 minimal_mistakes_skin: dark
 search: true
+locale: "en-US"
 
 # Build settings
 markdown: kramdown
