--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ subtitle: "Doing stupid stuff for the fun of it."
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about everyday life, from the perspective of an everyday person
-twitter_username: username
+url: "https://drewssite.top"
+repository: foxler2010/foxler2010.github.io
+# twitter_username: username
 github_username: foxler2010
 minimal_mistakes_skin: dark
 search: true
