--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,7 @@ main:
     url: /about/
   - title: "Archive"
     url: /posts/
-# this stuff will be inside a submenu...
-#  - title: "Categories"
-#    url: /categories/
-#  - title: "Tags"
-#    url: /tags/
+    - title: "Categories
+      url: /categories/
+  - title: "Tags"
+    url: /tags/
