--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Drew's DIY
 subtitle: "Doing stupid stuff for the fun of it."
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog about everyday life, from the perspective of an everyday person
+  A blog about everyday life, from the perspective of an everyday person.
 url: "https://drewssite.top"
 repository: foxler2010/foxler2010.github.io
 # twitter_username: username
