--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Drew's DIY
 subtitle: "Doing stupid stuff for the fun of it."
-email:
+email: drew@drewssite.top
 description: >- # this means to ignore newlines until "baseurl:"
   A blog about everyday life, from the perspective of an everyday person.
 url: "https://drewssite.top"
@@ -79,6 +79,9 @@ author:
    # - label: "Instagram"
    #   icon: "fab fa-fw fa-instagram"
    #   url: "https://instagram.com/"
+    - label: "Email"
+      icon: "fab fa-fw fa-email"
+      url: "drew@drewssite.top"
 
 footer:
   links:
@@ -91,6 +94,9 @@ footer:
    # - label: "Instagram"
    #   icon: "fab fa-fw fa-instagram"
    #   url: "https://instagram.com/"
+     - label: "Email"
+       icon: "fab fa-fw fa-email"
+       url: "drew@drewssite.top"
 
 defaults:
   # _posts
