--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ footer:
    #   url: "https://instagram.com/"
      - label: "Email"
        icon: "fab fa-fw fa-email"
-       url: "drew@drewssite.top"
+       email: "drew@drewssite.top"
 
 defaults:
   # _posts
