Revert "Update _config.yml"
This reverts commit 813c3fe6378c6cc291413a64c3809192fdbcd3cb.

--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ footer:
    #   url: "https://instagram.com/"
      - label: "Email"
        icon: "fab fa-fw fa-email"
-       email: "drew@drewssite.top"
+       url: "drew@drewssite.top"
 
 defaults:
   # _posts
