--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
+# Eclipse .project file
+/.project
+
+# Stuff that was here when I genereated this repo
 _site
 .sass-cache
 .jekyll-metadata
 Gemfile.lock
-.gitpod.Dockerfile
-.gitpod.yml
