--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/foxler2010"
+    - label: "Email"
+      icon: "fab fa-fw fa-email"
+      url: "drew@drewssite.top"
    # - label: "Instagram"
    #   icon: "fab fa-fw fa-instagram"
    #   url: "https://instagram.com/"
