--- a/_config.yml
+++ b/_config.yml
@@ -77,8 +77,8 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/foxler2010"
     - label: "Email"
-      icon: "fab fa-fw fa-email"
-      url: "drew@drewssite.top"
+      icon: "fas fa-fw fa-email"
+      url: "mailto:drew@drewssite.top"
    # - label: "Instagram"
    #   icon: "fab fa-fw fa-instagram"
    #   url: "https://instagram.com/"
