--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ author:
       icon: "fab fa-fw fa-github"
       url: "https://github.com/foxler2010"
     - label: "Email"
-      icon: "fas fa-fw fa-email"
+      icon: "fas fa-fw fa-link"
       url: "mailto:drew@drewssite.top"
    # - label: "Instagram"
    #   icon: "fab fa-fw fa-instagram"
