--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# DOES NOT ignore /dist (where the latest build is),
+# as I build everything locally and then push it to Github to be served by Pages.
+# That way I do not have to use Actions and I can control when to update the live site simply by building only when needed, not on every push.
+
 # Logs
 logs
 *.log
@@ -7,10 +11,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Local Environment
 node_modules
 .DS_Store
-dist
-dist-ssr
 coverage
 *.local
 
