--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -15,6 +15,8 @@ jobs:
       - name: Build prod
         run: npm run build
       - uses: actions/upload-pages-artifact@v1.0.8
+        with:
+          path: dist/
   deploy:
     needs: build
     permissions:
